clusters/k4/kubernetes/apps/dev/gitlab/app/ciliumnetworkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: ${APP}
spec:
  endpointSelector:
    matchLabels:
      {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            {}
  egress:
    - toEndpoints:
        - matchLabels:
            {}
